lab1/Test/L1-A-11-70.cmm
int jw_gK 
;
float Dwop0HQL7np_W_A ( int IvyMnZBidC8Zqq , struct 
  rEvAVBK Yc8SVXd4B_4ra2VZukN [ 1215444140 ] ) {
}
int ;
int ;
int ;
int ;
struct {
  struct vPTEIrEnu {
    int rcSVUMRfBwjtkLAT ;
    int tWALn1GTqO7yAx8 
    int TGhTwyPnPhRFL8uo875 ;
  }k8HDHoIcroKzMpB ;
  struct NTpc94m22KBhBJ rbmg5yY83 UxOqQoyU8fY1q0 ;
  int _p3Ukv_cIwdRXUefKhj ;
  int _jWHigOd7Tdkc493url , = IB == HnPRh6im6b5 + 
    - ! itsMq_gf ( LXblTaW = Wqv || m && VbKu30aRzfb != 
    ( _zQt4w85Lem8n0I && uoLh >= gP4nRKlwCqUGtUc2 * iFIKi1LGcYdH 
    ( tFbfPe3HaeMXeePdmplH , oF > X + ( eP1VdTT2fPTOsJ_SqHws 
    && mlOvfDae57e <= qgr0wqcI4tpM5M - rj6Sm ( BM || RB0doWLVaA 
    < aTiUK ) ) ) ) [ 921139591.2063916564 - ! 2102395322 
    . ZCV57JYd ] * VKpqUpER3 ( ) / Gdkovzk8rZW0545 ) ;
}b0tSm3lbs 
;
struct {
  struct kj22CA7Uwg1M5WHt1zPX k ;
}Py4qUSlIa , J98RJDhAWxKzHwLhhNU 

;
int gnVv ( ) {
  T ;
  _T75 ;
  if ( qxy3OdZ_Br_wO )   B1MyIOCeXfvqlz5zbdm ;
else   if ( L )   q ;


  if ( URW69CrF )   while ( qu_ht3ilbtYMIF9 )   mEMFislfasyTIrZg 
    ;


  if ( N )   return sbpuM7Df8T 
else {
  }
! }
